--- a/style.css
+++ b/style.css
@@ -80,4 +80,52 @@ table th{
 th,td{
     padding: 5px;
 }
+.popup{
+    width: 400px;
+    background-color: #fff;
+    border-radius:6px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(0.1);
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #333;
+    visibility: hidden;
+    transition:transform .5s,top .4s;
+}
+.open-popup{
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%,-50%) scale(1);
+}
+.popup img{
+    width: 100px;
+    margin-top: -50px;
+    padding-bottom: 0px;
+    border-radius: 20%;
+}
+.popup h2{
+    font-size: 38px;
+    font-weight: 500;
+    margin: 30px 0 10px;
+}
+.popup button{
+    width: 100%;
+    margin-top: 50px;
+    padding: 10px 0;
+    background: #ae5626;
+    color: #fff;
+    border: 0;
+    outline: none;
+    font-size: 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3) ;
+    height: 40px;
+}
 
+.popup button:hover{
+    background-color: #5dbea3;
+    letter-spacing: 2px;
+}
